<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_STATE" Id="{c7e5f26a-42ca-4788-8f83-7c6798360e04}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_STATE :
(
	uninit:=0,
	ready,
	busy,
	error
	
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>