<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_MAIN" Id="{7384caef-394f-40b5-a173-7cc02d269eff}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
VAR_GLOBAL
	fbFEEDER: FB_FEEDER;
	fbSEPARATE1: FB_SEPARATE;
	fbSEPARATE2: FB_SEPARATE;
	MAIN_CONV:FB_Axis;
	SUP_CONV:FB_Axis;
	PRESS1A:FB_Axis;
	PRESS1B:FB_Axis;
	PIST1: FB_PISTON;
	PIST2: FB_PISTON;
	PIST_FEEDER1: FB_PISTON;
	PIST_FEEDER2: FB_PISTON;
	PIST_FEEDER3: FB_PISTON;
	PIST_SEPARATE1_1: FB_PISTON;
	PIST_SEPARATE1_2: FB_PISTON;
	PIST_SEPARATE1_3: FB_PISTON;
	PIST_SEPARATE1_4: FB_PISTON;
	PIST_SEPARATE1_5: FB_PISTON;
	PIST_SEPARATE1_6: FB_PISTON;
	PIST_SEPARATE2_1: FB_PISTON;
	PIST_SEPARATE2_2: FB_PISTON;
	PIST_SEPARATE2_3: FB_PISTON;
	PIST_SEPARATE2_4: FB_PISTON;
	PIST_SEPARATE2_5: FB_PISTON;
	PIST_SEPARATE2_6: FB_PISTON;
	
	bMAIN_HOME:BOOL:=FALSE;
	sMAIN_STATE:STRING:='UNINIT';
	eMAIN_STATE: E_STATE:=E_STATE.uninit;
	bMAIN_RESET:BOOL:=FALSE;
	iMAIN_STATE: INT:=98;
	bMAIN_PAUSE:BOOL:=FALSE;
	bMAIN_START:BOOL:=FALSE;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>