<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="MACHINE" Id="{9f31af90-0ebb-4c9c-9f88-fd85631a41cf}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MACHINE
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF fbFEEDER.eSTATE= E_STATE.error OR fbSEPARATE1.eSTATE= E_STATE.error OR MAIN_CONV.eSTATE= E_STATE.error OR SUP_CONV.eSTATE= E_STATE.error THEN
	iMAIN_STATE:=99 ;
END_IF

IF bMAIN_RESET THEN
	iMAIN_STATE:=98 ;
	bMAIN_PAUSE:=FALSE;
	sMAIN_STATE:='UNINIT';
END_IF

CASE iMAIN_STATE OF 
	1://===================================== HOME ============================
		MAIN_CONV.aHOME();
		SUP_CONV.aHOME();
		eMAIN_STATE:=E_STATE.busy;
		bMAIN_HOME:=FALSE;
		sMAIN_STATE:='HOMING';
		IF MAIN_CONV.bHOMED THEN
			iMAIN_STATE:=100;
			bMAIN_HOMED:=TRUE;
		END_IF
	2: //====================================  START ==============================
		eMAIN_STATE:=E_STATE.busy;
		sMAIN_STATE:='CONVAYORS';
		MAIN_CONV.mMOVE_REL(1000);
		SUP_CONV.mMOVE_REL(1000);
		IF SUP_CONV.eSTATE= E_STATE.busy AND MAIN_CONV.eSTATE = E_STATE.busy THEN
			iMAIN_STATE:=3;
		END_IF
	3://wait for convayors
		IF SUP_CONV.eSTATE= E_STATE.ready AND MAIN_CONV.eSTATE = E_STATE.ready THEN
			IF NOT bMAIN_PAUSE THEN
				iMAIN_STATE:=4;
			END_IF
		END_IF
		
	4: //stations
		eMAIN_STATE:=E_STATE.busy;
		sMAIN_STATE:=' STANIONS';
		fbFEEDER.aSTART();
		fbSEPARATE1.aSTART();
		fbSEPARATE2.aSTART();
		IF fbSEPARATE1.eSTATE= E_STATE.busy AND fbSEPARATE2.eSTATE= E_STATE.busy AND fbFEEDER.eSTATE= E_STATE.busy THEN
			iMAIN_STATE:=5;
		END_IF
	5://wait for separate1
		IF fbSEPARATE1.eSTATE= E_STATE.ready AND fbSEPARATE2.eSTATE= E_STATE.ready AND fbFEEDER.eSTATE= E_STATE.ready THEN
			IF NOT bMAIN_PAUSE THEN
				iMAIN_STATE:=100;
			END_IF
		END_IF
		
	98://======================================== UNINIT ============================
		bMAIN_HOMED:=FALSE;
		eMAIN_STATE:=E_STATE.uninit;
		sMAIN_STATE:='UNINIT';
		bMAIN_RESET:=FALSE;
		fbFEEDER.aRESET();
		fbSEPARATE1.aRESET();
		MAIN_CONV.aRESET();
		
		IF fbFEEDER.eSTATE = E_STATE.uninit AND fbSEPARATE1.eSTATE = E_STATE.uninit AND MAIN_CONV.eSTATE=E_STATE.uninit  AND SUP_CONV.eSTATE=E_STATE.uninit THEN
			iMAIN_STATE:=980;
		END_IF
	980: 
		IF fbFEEDER.eSTATE= E_STATE.ready AND fbSEPARATE1.eSTATE= E_STATE.ready AND MAIN_CONV.eSTATE=E_STATE.uninit  AND SUP_CONV.eSTATE=E_STATE.uninit 
			IF bMAIN_HOME THEN
				iMAIN_STATE:=1;
			END_IF
		END_IF
	
	99://========================================== ERROR ================================
		eMAIN_STATE:=E_STATE.error;
		sMAIN_STATE:='MACHINE ERROR';
		
	100://========================================= READY ================================
		eMAIN_STATE:=E_STATE.ready;
		sMAIN_STATE:='READY';
		IF bMAIN_START THEN
			bMAIN_START:=FALSE;
			iMAIN_STATE:=2;
		END_IF
		
END_CASE]]></ST>
    </Implementation>
    <LineIds Name="MACHINE">
      <LineId Id="114" Count="1" />
      <LineId Id="6" Count="4" />
      <LineId Id="96" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="16" Count="1" />
      <LineId Id="120" Count="0" />
      <LineId Id="140" Count="0" />
      <LineId Id="124" Count="0" />
      <LineId Id="126" Count="0" />
      <LineId Id="125" Count="0" />
      <LineId Id="121" Count="1" />
      <LineId Id="133" Count="0" />
      <LineId Id="123" Count="0" />
      <LineId Id="119" Count="0" />
      <LineId Id="18" Count="1" />
      <LineId Id="135" Count="0" />
      <LineId Id="141" Count="0" />
      <LineId Id="21" Count="8" />
      <LineId Id="32" Count="0" />
      <LineId Id="97" Count="2" />
      <LineId Id="142" Count="1" />
      <LineId Id="100" Count="9" />
      <LineId Id="63" Count="2" />
      <LineId Id="134" Count="0" />
      <LineId Id="66" Count="3" />
      <LineId Id="139" Count="0" />
      <LineId Id="70" Count="6" />
      <LineId Id="127" Count="1" />
      <LineId Id="77" Count="0" />
      <LineId Id="82" Count="6" />
      <LineId Id="112" Count="1" />
      <LineId Id="89" Count="0" />
      <LineId Id="92" Count="2" />
      <LineId Id="11" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>